refactor: PostService Transactional 범위 변경 및 toList 단순화